jwt fix
